--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.20'
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
 	annotationProcessor('org.projectlombok:lombok:1.18.20')
-	implementation 'com.h2database:h2'
+//	implementation 'com.h2database:h2'
+	implementation('com.oracle.database.jdbc:ojdbc8')
 //	providedRuntime('com.oracle.database.jdbc:ojdbc8:19.3.0.0')
 //	implementation('com.oracle.database.jdbc:ucp:19.3.0.0')
 //	implementation('com.oracle.database.ha:ons')
