--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,17 +4,20 @@ server:
     context-path: /recruitment-app
 
 spring:
-  h2:
-    console:
-      enabled: true
+#  h2:
+#    console:
+#      enabled: true
   datasource:
-    url: jdbc:h2:mem:user_management_db
-    username: suki
+    url: jdbc:oracle:thin:@localhost:1521:xe
+    username: APPUSER
     password: suki123
-    driverClassName: org.h2.Driver
+#    driverClassName: org.h2.Driver
     initialization-mode: always
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.Oracle10gDialect
   mail:
     host: smtp.gmail.com
     port: 587
