--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.projectlombok:lombok:1.18.20'
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
+	implementation('commons-fileupload:commons-fileupload:1.3.3')
 	annotationProcessor('org.projectlombok:lombok:1.18.20')
 //	implementation 'com.h2database:h2'
 	implementation('com.oracle.database.jdbc:ojdbc8')
